--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*
- Theme Name:   Understrap Child
- Theme URI:    https://understrap.com
- Description:  Understrap Child Theme
- Author:       the Understrap Contributors
- Author URI:   https://github.com/understrap/understrap-child/graphs/contributors
+ Theme Name:   Learning Silicon
+ Theme URI:    https://learningsilicon.com
+ Description:  The theme for learningsilicon.com
+ Author:       Jade Fairbanks
+ Author URI:   https://github.com/JadeFairbanks/learningsilicon
  Template:     understrap
  Version:      1.2.0
  License: GNU General Public License v2 or later
@@ -12,3 +12,4 @@
  Tags: one-column, custom-menu, featured-images, theme-options, translation-ready
  GitHub Theme URI: understrap/understrap-child
 */
+
